[package]
name = "chlue"
version = "0.1.0"
authors = ["Nicolas Bouliol <cheuveux@gmail.com>"]
edition = "2018"
description = "Basic commands for Philips hue from the command line"
repository = "https://github.com/nbouliol/chlue"
license = "MIT"


[dependencies]
huelib = "0.6.0"
termion = "1.5.5"
thiserror = "1.0.16"
structopt = "0.3.14"
